@@ -7,6 +7,7 @@ New features:
 - #504 : roles managing local roles restriction (membership tool)
 - #505 : Be able to reuse stacks
 - #507 : Delegatees managment
+- #509 : Inserting people in hierarchical stacks
 Bug fixes:
 ~~~~~~~~~~
 - Keep former local roles mapping during non stack flaged transition
